See the end of the file for license conditions.

* Noteworthy changes in release X.XX (library XX.X.X) (YYYY-MM-DD)
** New publications
** New features
*** Arithmetic

  --append: if the output file already exists, don't delete it, add the
    outputs as extra HDUs (by default, the output file is deleted). If the
    output does not exist, then this option has no affect.

  - New operators:

    - filter-madclip-mean: filter/smooth the input using MAD-clipped mean.

    - filter-madclip-median: filter/smooth the input using MAD-clipped
      median.

    - madclip-maskfilled: mask (set to NaN) all input elements that are
      outliers (defined by MAD-clipping). Combined with the stacking
      operators this allows removing large contiugous outliers in your
      final stacked datasets.

    - siglclip-maskfilled: similar to 'madclip-maskfilled', but defining
      outliers by Sigma-clipping.

    - free: free (from memory) the top operand on the stack of
      operands. This is useful in combination with operators that produce
      more than one output operand.

*** Statistics

  --concentration: measure the "concentration" of values in a distribution
    around the median. See the book for the full description of this
    option.

*** astscript-fits-view
  --globalhdu: use the same HDU in any number of input files (with the
    short format of '-g'); similar to the same option in Arithmetic or
    ConvertType.

  --ds9region: load any number of DS9 region files (separated by comas and
    given to this option) into the DS9 window that will be opened. This was
    added by Giacomo Lorenzetti.

  - The default DS9 'sls' colormap contrast and bias are adjusted so the
    largest value does not have a white color, but is dark red. This was
    done because white is DS9's default color for blank pixels and
    out-of-image regions; making the pixels with the largest value
    invisible.

*** astscript-radial-profile